--- a/trippin/package.json
+++ b/trippin/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@google/generative-ai": "^0.20.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@react-google-maps/api": "^2.19.3",
